k8s-crds-test/src/snapshots/k8s_crds_test__tests__serde_basic.snap
---
source: k8s-crds-test/src/lib.rs
assertion_line: 27
expression: s
---
---
apiVersion: stable.example.com/v1
kind: CronTab
metadata:
  name: test
spec:
  cronSpec: "* * * * *"
  image: nginx
  replicas: 2

