k8s-crds-test/src/snapshots/k8s_crds_test__tests__serde_double.snap
---
source: k8s-crds-test/src/lib.rs
assertion_line: 51
expression: s
---
---
apiVersion: stable.example.com/v1
kind: CronTab
metadata:
  name: test
obj1:
  a:
    b: BB
obj2:
  a:
    c: 4

