k8s-crds-test/src/snapshots/k8s_crds_test__tests__serde_long.snap
---
source: k8s-crds-test/src/lib.rs
assertion_line: 72
expression: s
---
---
metadata:
  name: test
a:
  b:
    c:
      d:
        e: 2
      f:
        g: gg

